log
Fri May 13 15:40:07 UTC 2022: 
 sudoku.c | 21 ++++++++++++++++++++-
 1 file changed, 20 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:61:25: error: comparison between pointer and integer [-Werror]
         if(n->sudo[i][j]=="0")
                         ^~
sudoku.c:61:25: error: comparison with string literal results in unspecified behavior [-Werror=address]
sudoku.c:64:28: error: passing argument 1 of ‘copy’ from incompatible pointer type [-Werror=incompatible-pointer-types]
           adn_j->sudo=copy(n->sudo,9);
                            ^
sudoku.c:15:7: note: expected ‘Node * {aka struct <anonymous> *}’ but argument is of type ‘int (*)[9]’
 Node* copy(Node* n){
       ^~~~
sudoku.c:64:23: error: too many arguments to function ‘copy’
           adn_j->sudo=copy(n->sudo,9);
                       ^~~~
sudoku.c:15:7: note: declared here
 Node* copy(Node* n){
       ^~~~
sudoku.c:64:22: error: assignment to expression with array type
           adn_j->sudo=copy(n->sudo,9);
                      ^
sudoku.c:66:11: error: implicit declaration of function ‘push_back’; did you mean ‘pushBack’? [-Werror=implicit-function-declaration]
           push_back(list, adn_j);
           ^~~~~~~~~
           pushBack
cc1: all warnings being treated as errors
Compilation failed
81d8e34
Fri May 13 15:40:18 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:61:25: error: comparison between pointer and integer [-Werror]
         if(n->sudo[i][j]=="0")
                         ^~
sudoku.c:61:25: error: comparison with string literal results in unspecified behavior [-Werror=address]
sudoku.c:64:28: error: passing argument 1 of ‘copy’ from incompatible pointer type [-Werror=incompatible-pointer-types]
           adn_j->sudo=copy(n->sudo,9);
                            ^
sudoku.c:15:7: note: expected ‘Node * {aka struct <anonymous> *}’ but argument is of type ‘int (*)[9]’
 Node* copy(Node* n){
       ^~~~
sudoku.c:64:23: error: too many arguments to function ‘copy’
           adn_j->sudo=copy(n->sudo,9);
                       ^~~~
sudoku.c:15:7: note: declared here
 Node* copy(Node* n){
       ^~~~
sudoku.c:64:22: error: assignment to expression with array type
           adn_j->sudo=copy(n->sudo,9);
                      ^
cc1: all warnings being treated as errors
Compilation failed
129fce7
Fri May 13 15:41:16 UTC 2022: 
In file included from test.c:5:0:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:61:25: error: comparison between pointer and integer [-Werror]
         if(n->sudo[i][j]=="0")
                         ^~
sudoku.c:61:25: error: comparison with string literal results in unspecified behavior [-Werror=address]
sudoku.c:64:28: error: passing argument 1 of ‘copy’ from incompatible pointer type [-Werror=incompatible-pointer-types]
           adn_j->sudo=copy(n->sudo,9);
                            ^
sudoku.c:15:7: note: expected ‘Node * {aka struct <anonymous> *}’ but argument is of type ‘int (*)[9]’
 Node* copy(Node* n){
       ^~~~
sudoku.c:64:23: error: too many arguments to function ‘copy’
           adn_j->sudo=copy(n->sudo,9);
                       ^~~~
sudoku.c:15:7: note: declared here
 Node* copy(Node* n){
       ^~~~
sudoku.c:64:22: error: assignment to expression with array type
           adn_j->sudo=copy(n->sudo,9);
                      ^
cc1: all warnings being treated as errors
Compilation failed
af4dfc3
Sat May 14 17:46:17 UTC 2022: 
 sudoku.c | 16 +---------------
 1 file changed, 1 insertion(+), 15 deletions(-)
 tests:  0|5
total_score: 0/70
861cab9
Sun May 15 04:30:24 UTC 2022: 
 sudoku.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:60:19: error: statement with no effect [-Werror=unused-value]
       Adj->sudo[i][j];
       ~~~~~~~~~~~~^~~
cc1: all warnings being treated as errors
Compilation failed
ed383c3
Sun May 15 04:30:43 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
30d3eb4
Sun May 15 04:44:48 UTC 2022: 
 sudoku.c | 53 ++++++++++++++++++++++++++++++++++++++++++++++++++++-
 1 file changed, 52 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
sudoku.c: In function ‘vacio’:
sudoku.c:51:7: error: ‘check’ undeclared (first use in this function)
       check[i]=0;
       ^~~~~
sudoku.c:51:7: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c: In function ‘is_valid’:
sudoku.c:94:22: error: ‘k’ undeclared (first use in this function)
         int i = 3 * (k / 3) + (p / 3);
                      ^
sudoku.c:94:32: error: ‘p’ undeclared (first use in this function)
         int i = 3 * (k / 3) + (p / 3);
                                ^
sudoku.c:95:13: error: unused variable ‘j’ [-Werror=unused-variable]
         int j = 3 * (k % 3) + (p % 3);
             ^
sudoku.c:94:13: error: unused variable ‘i’ [-Werror=unused-variable]
         int i = 3 * (k / 3) + (p / 3);
             ^
cc1: all warnings being treated as errors
Compilation failed
dc490cc
Sun May 15 04:46:00 UTC 2022: 
 sudoku.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
In file included from test.c:5:0:
sudoku.c: In function ‘vacio’:
sudoku.c:51:7: error: ‘check’ undeclared (first use in this function)
       check[i]=0;
       ^~~~~
sudoku.c:51:7: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c: In function ‘is_valid’:
sudoku.c:94:22: error: ‘k’ undeclared (first use in this function)
         int i = 3 * (k / 3) + (p / 3);
                      ^
sudoku.c:94:32: error: ‘p’ undeclared (first use in this function)
         int i = 3 * (k / 3) + (p / 3);
                                ^
Compilation failed
8fcc626
Sun May 15 04:46:17 UTC 2022: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
sudoku.c: In function ‘vacio’:
sudoku.c:51:7: error: ‘check’ undeclared (first use in this function)
       check[i]=0;
       ^~~~~
sudoku.c:51:7: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
2828cd6
Sun May 15 04:46:37 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
b11a1f1
Sun May 15 04:49:25 UTC 2022: 
 sudoku.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
 tests:  4|3
total_score: 30/70
5fef634
Sun May 15 04:54:52 UTC 2022: 
 sudoku.c | 5 +++++
 1 file changed, 5 insertions(+)
In file included from test.c:5:0:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:123:19: error: ‘newNode’ undeclared (first use in this function); did you mean ‘Node’?
       if(is_valid(newNode)==1)
                   ^~~~~~~
                   Node
sudoku.c:123:19: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
440eb65
Sun May 15 04:55:10 UTC 2022: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:123:19: error: expected expression before ‘Node’
       if(is_valid(Node)==1)
                   ^~~~
sudoku.c:125:23: error: expected expression before ‘Node’
         pushBack(list,Node);
                       ^~~~
Compilation failed
10f2cfb
Sun May 15 04:55:38 UTC 2022: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  4|3
total_score: 30/70
4602296
Sun May 15 04:59:09 UTC 2022: 
 sudoku.c | 17 ++++++++++++++++-
 1 file changed, 16 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
sudoku.c: In function ‘posicionActual’:
sudoku.c:118:18: error: ‘line’ undeclared (first use in this function); did you mean ‘linea’?
       if(n->sudo[line][i]==0)
                  ^~~~
                  linea
sudoku.c:118:18: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:121:7: error: expected ‘;’ before ‘}’ token
       }
       ^
Compilation failed
64ffe81
Sun May 15 04:59:26 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
sudoku.c: In function ‘posicionActual’:
sudoku.c:121:7: error: expected ‘;’ before ‘}’ token
       }
       ^
Compilation failed
b8bda59
Sun May 15 04:59:35 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|3
total_score: 30/70
e99a7b4
Sun May 15 05:00:03 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 55/70
63f69f8
